Doesn't fail for general contractions

--- a/pulsar_scf_test/helpers/CMakeLists.txt
+++ b/pulsar_scf_test/helpers/CMakeLists.txt
@@ -1,5 +1,5 @@
 pulsar_cxx_test(helpers TestDIIS ${PULSAR_SCF})
-target_link_libraries(TestDIIS PRIVATE /home/ryan/pulsar/lib/libint2.a)
 pulsar_py_test(helpers TestSchwarzScreen ${PULSAR_SCF})
 pulsar_cxx_test(helpers TestShellPairItr ${PULSAR_SCF})
+pulsar_cxx_test(helpers TestShellTripleItr ${PULSAR_SCF})
 pulsar_cxx_test(helpers TestShellQuartetItr ${PULSAR_SCF})
