Can now do a full GA F build

--- a/pulsar_scf/ga_builders/CMakeLists.txt
+++ b/pulsar_scf/ga_builders/CMakeLists.txt
@@ -4,7 +4,14 @@ if(${ENABLE_GA})
                                  GATensor.cpp
                                  GlobalArrays.cpp
                                  dummy.F
+                                 H.cpp
+                                 G.cpp
+                                 F.cpp
                                  JK.cpp
+                                 T.cpp
+                                 V.cpp
+                                 S.cpp
+                                 X.cpp
                                  PARENT_SCOPE
     )
     set_source_files_properties(pulsar_scf/ga_builders/JK.cpp PROPERTIES COMPILE_FLAGS -DENABLE_GA)
