--- a/pulsar_scf_test/builders/CMakeLists.txt
+++ b/pulsar_scf_test/builders/CMakeLists.txt
@@ -1,3 +1,3 @@
-foreach(x TestD TestDFCoef TestDFInts TestH TestJK TestMetric TestS TestT TestV TestX)
+foreach(x TestD TestDFCoef TestDFInts TestF TestG TestH TestJK TestMetric TestS TestT TestV TestX)
    pulsar_py_test(builders ${x} ${PULSAR_SCF})
 endforeach()
