--- a/pulsar_scf_test/helpers/CMakeLists.txt
+++ b/pulsar_scf_test/helpers/CMakeLists.txt
@@ -1,5 +1,5 @@
-pulsar_cxx_test(helpers TestDIIS ${PULSAR_SCF})
-pulsar_py_test(helpers TestSchwarzScreen ${PULSAR_SCF})
-pulsar_cxx_test(helpers TestShellPairItr ${PULSAR_SCF})
-pulsar_cxx_test(helpers TestShellTripleItr ${PULSAR_SCF})
-pulsar_cxx_test(helpers TestShellQuartetItr ${PULSAR_SCF})
+foreach(x TestDIIS TestShellPairItr TestShellTripleItr TestShellQuartetItr)
+    pulsar_cxx_test(helpers ${x} ${PULSAR_SCF_PREFIX})
+endforeach()
+
+pulsar_py_test(helpers TestSchwarzScreen ${PULSAR_SCF_PREFIX})
