--- a/pulsar_scf_test/scf/CMakeLists.txt
+++ b/pulsar_scf_test/scf/CMakeLists.txt
@@ -1,2 +1,2 @@
-pulsar_py_test(scf TestSCF ${PULSAR_SCF})
-pulsar_py_test(scf TestDFSCF ${PULSAR_SCF})
+pulsar_py_test(scf TestSCF ${PULSAR_SCF_PREFIX})
+pulsar_py_test(scf TestDFSCF ${PULSAR_SCF_PREFIX})
